[project]
name = "codegraph"
version = "0.1.0"
description = "Multi-language code graph extraction and MCP tools"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ritesh Dubey", email = "reeth.tech@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.21.0,<0.22",
    "tree-sitter-languages>=1.8.0",
    "mcp>=1.0.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.7.0"]
chroma = ["chromadb>=0.4.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
codegraph = "codegraph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codegraph"]
